--- a/Untitled/Untitled.Rmd
+++ b/Untitled/Untitled.Rmd
@@ -1,25 +1,25 @@
 ---
-title: 'RESIDÊNCIA E MOVIMENTAÇÃO: HÁ ALGUM PADRÃO PARA PEIXES EM RIACHO DE CABECEIRA?'
+title: 'RESIDÊNCIA E MOVIMENTAÇÃO: HÁ ALGUM PADRÃO PARA PEIXES EM RIACHO DE CAECEIRA?'
 author:
-- name: Amanda Letícia Bauer
-  email: amandaleticiabauer@hotmail.com
-  affiliation: "Laboratório de Ictiologia - Universidade Federal do Rio Grande FURG"
+- name: Amanda Letícia auer
+  email: amandaleticiaauer@hotmail.com
+  affiliation: "Laoratório de Ictiologia - Universidade Federal do Rio Grande FURG"
   correspondingauthor: true
   footnote: 1
-- name: Gabriela Buzlarf
-  affiliation: "Laboratório de Ecologia de Peixes - Universidade do Vale do Rio dos
+- name: Gariela uzlarf
+  affiliation: "Laoratório de Ecologia de Peixes - Universidade do Vale do Rio dos
     Sinos UNISINOS"
 - name: Kelly Correia de Lima
-  affiliation: "Laboratório de Ecologia de Peixes - Universidade do Vale do Rio dos
+  affiliation: "Laoratório de Ecologia de Peixes - Universidade do Vale do Rio dos
     Sinos UNISINOS"
   footnote: 2
 - name: Uwe Horst Schulz
-  affiliation: "Laboratório de Ecologia de Peixes - Universidade do Vale do Rio dos
+  affiliation: "Laoratório de Ecologia de Peixes - Universidade do Vale do Rio dos
     Sinos UNISINOS"
   footnote: 2
 address:
 - code: 2
-  organization: "Laboratório de Ecologia de Peixes - Universidade do Vale do Rio dos
+  organization: "Laoratório de Ecologia de Peixes - Universidade do Vale do Rio dos
     Sinos UNISINOS"
   addressline: 1 Main Street
   city: Gotham
@@ -27,40 +27,28 @@ address:
   postcode: 123456
   country: United States
 - code: 1
-  organization: "Laboratório de Ictiologia - Universidade Federal do Rio Grande FURG"
+  organization: "Laoratório de Ictiologia - Universidade Federal do Rio Grande FURG"
   addressline: A Street 29
   postcode: 2054 NX
   city: Manchester
   country: United Kingdom
-output:
-  pdf_document: default
-  html_document:
-    df_print: paged
 footnote:
 - code: 1
   text: This is the first author footnote.
 - code: 2
   text: Another author footnote.
   journal: "An awesome journal"
-date: "`r Sys.Date()`"
-linenumbers: false
-numbersections: true
-bibliography: mybibfile.bib
-biblio-style: elsarticle-harv # author year style for natbib - use 'elsarticle-num' or 'elsarticle-num-names' for numbered scheme
-classoption: preprint, 3p, authoryear # remove authoryear is not using `elsarticle-harv`
-# csl: https://www.zotero.org/styles/elsevier-harvard
+
+    
 output: 
-  rticles::elsevier_article:
-    keep_tex: true
-    citation_package: natbib
-editor_options: 
-  markdown: 
-    wrap: 72
+  pdf_document:
+    latex_engine: xelatex
 ---
+
 
 **Resumo**
 
-Estudos em riachos que investigam padrões de movimentação de peixes são escassos e apresentam lacunas. As taxas de recaptura são baixas e os potenciais fatores causadores são: baixa eficiência da captura, mortalidade dos indivíduos marcados, alta mobilidade e perda de marcas. O estudo objetivou investigar a comunidade de peixes em um arroio estreito e de baixa vazão para aumentar a eficácia da captura, em escala temporal e espacial menor para compreender os movimentos. O estudo ocorreu nas corredeiras de um tributário do rio Paranhana, parte superior da bacia do Rio dos Sinos no Município de Igrejinha, totalizando 540m investigados. Os peixes foram coletados com pesca elétrica, anestesiados com solução de Eugenol e marcados com VIFE. Em cada evento, uma marca específica foi aplicada. Foram marcados 520 indivíduos com comprimento total maior que 5 cm, e recapturados com marca 131 (25,2%). Sendo 21,2% recapturados no local da marcação, 1,3% em corredeiras a jusante e 2,7% a montante. As espécies com maior quantidade de indivíduos recapturados foram C*haracidium pterostictum* e *Heptapterus mustelinu*s. Os movimentos de *C. pterostictum* a montante ocorreram significativamente mais frequentemente do que a jusante do ponto de marcação (chi2=5,4; p=0,001). O padrão das recapturas indicou um comportamento parcialmente residente na corredeira da marcação. Um indivíduo de *H. mustelinus* apresentou 4 marcas consecutivas. As marcações se distribuíram uniformemente durante as campanhas, demonstrando a eficácia do método. Os 75% não recapturados podem ter se dispersado de forma ativa, ou fora do local do estudo. O padrão é semelhante a outros estudos, demonstrando que uma parte da comunidade é parcialmente residente e outra altamente móvel.
+Estudos em riachos que investigam padrões de movimentação de peixes são escassos e apresentam lacunas. As taxas de recaptura são aixas e os potenciais fatores causadores são: aixa eficiência da captura, mortalidade dos indivíduos marcados, alta moilidade e perda de marcas. O estudo ojetivou investigar a comunidade de peixes em um arroio estreito e de aixa vazão para aumentar a eficácia da captura, em escala temporal e espacial menor para compreender os movimentos. O estudo ocorreu nas corredeiras de um triutário do rio Paranhana, parte superior da acia do Rio dos Sinos no Município de Igrejinha, totalizando 540m investigados. Os peixes foram coletados com pesca elétrica, anestesiados com solução de Eugenol e marcados com VIFE. Em cada evento, uma marca específica foi aplicada. Foram marcados 520 indivíduos com comprimento total maior que 5 cm, e recapturados com marca 131 (25,2%). Sendo 21,2% recapturados no local da marcação, 1,3% em corredeiras a jusante e 2,7% a montante. As espécies com maior quantidade de indivíduos recapturados foram C*haracidium pterostictum* e *Heptapterus mustelinu*s. Os movimentos de *C. pterostictum* a montante ocorreram significativamente mais frequentemente do que a jusante do ponto de marcação (chi2=5,4; p=0,001). O padrão das recapturas indicou um comportamento parcialmente residente na corredeira da marcação. Um indivíduo de *H. mustelinus* apresentou 4 marcas consecutivas. As marcações se distriuíram uniformemente durante as campanhas, demonstrando a eficácia do método. Os 75% não recapturados podem ter se dispersado de forma ativa, ou fora do local do estudo. O padrão é semelhante a outros estudos, demonstrando que uma parte da comunidade é parcialmente residente e outra altamente móvel.
 
 Palavras chaves: - Marcação - Recaptura - *C. pterostictum* - *H. mustelinus*
 
@@ -68,34 +56,36 @@ Palavras chaves: - Marcação - Recaptura - *C. pterostictum* - *H. mustelinus*
 
 **INTRODUÇÃO**
 
-A dinâmica de dispersão é caracterizada pelo movimento dos indivíduos para longe do local de origem (LIDICKER e STENSETH, 1992) e é um fator determinante para entender a dinâmica populacional, o comportamento, a genética e a evolução das espécies (MCMAHON e MATTER, 2006), sendo fundamental para compreensão das funções das populações (TILMAN et al., 1997). A compreensão destes processos é essencial para a conservação dos ecossistemas aquáticos (LUCAS e BARRAS, 2001). O movimento pode estar relacionado com os estágios ontogenéticos como reprodução (HENRIQUES et al., 2010) refúgio e evasão a predação (ROBERTS e ANGERMEIER, 2007). Os distúrbios e pressões antropogênicas podem afetar ou impulsionar a dispersão (SHUKLA E BHAT, 2018). Os movimentos podem ser de curta ou longa distância. Os curtos são relativos a alterações nas condições abióticas e disponibilidade de recursos (ALBANESE et al., 2004) enquanto os de longa distância são relativos à reprodução e colonização (HENRIQUES et al., 2010). A maioria dos estudos avaliam a migração de peixes e são desenvolvidas em ambientes temperados e com peixes de grande porte e com valor comercial (KENNEDY et al., 2013). Mesmo apresentando um alto valor ecológico, peixes de pequeno porte e com menor valor econômico são pouco estudadas (CAROLSFELD et al., 2003). A migração mais extrema conhecida e documentada até então, é realizada pela Brachyplatystoma rousseauxii, que desova no extremo oeste da Amazônia e apresenta um ciclo migratório de aproximadamente 11.600 km (BARTHEM et al., 2017). Em riachos, a movimentação dos peixes vem sendo investigada e documentada, porém ainda apresenta lacunas. Thompson (1933) calculou constantes de migração para espécies de peixes, percebendo movimentos aleatórios. Posteriormente Gerking (1950) buscava respostas sobre a estabilidade de populações em córregos no verão, e anos depois, propôs o “paradigma dos movimentos restritos” (PMR) (1959), determinando que a maioria das espécies de riachos são sedentárias. Estudos mais recentes apontam que comunidades são compostas tanto de indivíduos sedentários, quanto móveis (MAZZONI et al., 2018). A maneira com que os peixes se movem nos riachos também influencia na estrutura e na função das redes alimentares (WINEMILLER e JEPSEN, 1998). Fausch et al. (2002) explica que a dinâmica do movimento, resiliência, ou troca de habitat pode ser difícil de se mensurar, uma vez que a escala temporal no qual um organismo percebe seu ambiente nem sempre é aparente para os pesquisadores. Riachos apresentam ambientes sequenciais de corredeira (águas rasas, rápidas e ambiente rochoso) e poço (água lenta com substrato fino) (TERESA E CASSATI, 2012). A complexidade e as características geomorfológicas e hidrológicas do riacho influenciam diretamente a composição funcional dos peixes (TERESA et al., 2015). Em corredeiras, as espécies tipicamente encontradas são aquelas associadas ao substrato, como Heptapterus sp., Rineloricaria sp., 3 Trichomycterus sp. e Hemiancistrus sp. Em termos de abundância, a família Loricariidae é que melhor caracteriza a ictiofauna de corredeiras (BECKER, 2002). Estudos que investigam padrões de movimentação em riachos de cabeceira são ainda menores, devido à dificuldade de realizar ensaios de marcação e recaptura e ainda por apresentarem alta rotatividade de espécies (BARBOSA, 2019). Além disso, as taxas de recaptura são baixas, como no trabalho de Barbosa (2019), resultando uma média de 10% de recaptura dos indivíduos marcados. Em estudos abrangentes utilizando diversas espécies, as taxas de recapturas variam entre 4,7% (dados não publicados) até 35% (Mazzoni et al., 2018). Estes valores baixos podem ser causados por quatro fatores: a) Mortalidade alta dos indivíduos causado pelo manejo (handling) durante a captura e marcação; b) Perda de marcas; c) Eficiência baixa do método de captura; d) Alta mobilidade dos indivíduos, que leva a dispersão para fora da área de amostragem; As possibilidades a e b foram testadas no laboratório (Leal et al., 2012, Brennan et al., 2006). Os resultados destas publicações mostram, que com o manejo apropriado durante a captura e marcação a taxa de mortalidade é aproximadamente zero. Quanto a persistência das marcas, a durabilidade e fragmentação depende do local aplicado e da espécie estudada. Nos estudos, as marcas ficaram visíveis por mais de 70 dias, comprovando a eficácia do método em curto prazo. Nesse contexto, o objetivo do presente trabalho é executar ensaios de marcação e recaptura de peixes em um riacho de cabeceira na zona de corredeira para compreender os movimentos, em escala temporal e espacial menores para buscar compreender a eficácia do método de amostragem.
+A dinâmica de dispersão é caracterizada pelo movimento dos indivíduos para longe do local de origem (LIDICKER e STENSETH, 1992) e é um fator determinante para entender a dinâmica populacional, o comportamento, a genética e a evolução das espécies (MCMAHON e MATTER, 2006), sendo fundamental para compreensão das funções das populações (TILMAN et al., 1997). A compreensão destes processos é essencial para a conservação dos ecossistemas aquáticos (LUCAS e ARRAS, 2001). O movimento pode estar relacionado com os estágios ontogenéticos como reprodução (HENRIQUES et al., 2010) refúgio e evasão a predação (ROERTS e ANGERMEIER, 2007). Os distúrios e pressões antropogênicas podem afetar ou impulsionar a dispersão (SHUKLA E HAT, 2018). Os movimentos podem ser de curta ou longa distância. Os curtos são relativos a alterações nas condições aióticas e disponiilidade de recursos (ALANESE et al., 2004) enquanto os de longa distância são relativos à reprodução e colonização (HENRIQUES et al., 2010). A maioria dos estudos avaliam a migração de peixes e são desenvolvidas em amientes temperados e com peixes de grande porte e com valor comercial (KENNEDY et al., 2013). Mesmo apresentando um alto valor ecológico, peixes de pequeno porte e com menor valor econômico são pouco estudadas (CAROLSFELD et al., 2003). A migração mais extrema conhecida e documentada até então, é realizada pela rachyplatystoma rousseauxii, que desova no extremo oeste da Amazônia e apresenta um ciclo migratório de aproximadamente 11.600 km (ARTHEM et al., 2017). Em riachos, a movimentação dos peixes vem sendo investigada e documentada, porém ainda apresenta lacunas. Thompson (1933) calculou constantes de migração para espécies de peixes, perceendo movimentos aleatórios. Posteriormente Gerking (1950) uscava respostas sore a estailidade de populações em córregos no verão, e anos depois, propôs o “paradigma dos movimentos restritos” (PMR) (1959), determinando que a maioria das espécies de riachos são sedentárias. Estudos mais recentes apontam que comunidades são compostas tanto de indivíduos sedentários, quanto móveis (MAZZONI et al., 2018). A maneira com que os peixes se movem nos riachos tamém influencia na estrutura e na função das redes alimentares (WINEMILLER e JEPSEN, 1998). Fausch et al. (2002) explica que a dinâmica do movimento, resiliência, ou troca de haitat pode ser difícil de se mensurar, uma vez que a escala temporal no qual um organismo percee seu amiente nem sempre é aparente para os pesquisadores. Riachos apresentam amientes sequenciais de corredeira (águas rasas, rápidas e amiente rochoso) e poço (água lenta com sustrato fino) (TERESA E CASSATI, 2012). A complexidade e as características geomorfológicas e hidrológicas do riacho influenciam diretamente a composição funcional dos peixes (TERESA et al., 2015). Em corredeiras, as espécies tipicamente encontradas são aquelas associadas ao sustrato, como Heptapterus sp., Rineloricaria sp., 3 Trichomycterus sp. e Hemiancistrus sp. Em termos de aundância, a família Loricariidae é que melhor caracteriza a ictiofauna de corredeiras (ECKER, 2002). Estudos que investigam padrões de movimentação em riachos de caeceira são ainda menores, devido à dificuldade de realizar ensaios de marcação e recaptura e ainda por apresentarem alta rotatividade de espécies (AROSA, 2019). Além disso, as taxas de recaptura são aixas, como no traalho de arosa (2019), resultando uma média de 10% de recaptura dos indivíduos marcados. Em estudos arangentes utilizando diversas espécies, as taxas de recapturas variam entre 4,7% (dados não pulicados) até 35% (Mazzoni et al., 2018). Estes valores aixos podem ser causados por quatro fatores: a) Mortalidade alta dos indivíduos causado pelo manejo (handling) durante a captura e marcação; ) Perda de marcas; c) Eficiência aixa do método de captura; d) Alta moilidade dos indivíduos, que leva a dispersão para fora da área de amostragem; As possiilidades a e  foram testadas no laoratório (Leal et al., 2012, rennan et al., 2006). Os resultados destas pulicações mostram, que com o manejo apropriado durante a captura e marcação a taxa de mortalidade é aproximadamente zero. Quanto a persistência das marcas, a durailidade e fragmentação depende do local aplicado e da espécie estudada. Nos estudos, as marcas ficaram visíveis por mais de 70 dias, comprovando a eficácia do método em curto prazo. Nesse contexto, o ojetivo do presente traalho é executar ensaios de marcação e recaptura de peixes em um riacho de caeceira na zona de corredeira para compreender os movimentos, em escala temporal e espacial menores para uscar compreender a eficácia do método de amostragem.
 
-## Referências Bibliográficas
+## Referências iliográficas
 
-Albanese, B., Angermeier, P.L. & Dorai-Raj, S., 2004. Ecological correlates of fish movement in a network of Virginia streams. Canadian Journal of Fisheries and Aquatic Sciences 61: 857- 869
+Alanese, ., Angermeier, P.L. & Dorai-Raj, S., 2004. Ecological correlates of fish movement in a network of Virginia streams. Canadian Journal of Fisheries and Aquatic Sciences 61: 857- 869
 
-BARBOSA, Amanda. Efeito da estrutura de riachos de cabeceiras sobre a organização da comunidade de peixes. 2019. 80 f. Tese (Doutorado em Biologia) - Programa de Pós-Graduação Biologia, Universidade do Vale do Rio dos Sinos (UNISINOS), São Leopoldo, 2019.
+AROSA, Amanda. Efeito da estrutura de riachos de caeceiras sore a organização da comunidade de peixes. 2019. 80 f. Tese (Doutorado em iologia) - Programa de Pós-Graduação iologia, Universidade do Vale do Rio dos Sinos (UNISINOS), São Leopoldo, 2019.
 
-BARTHEM, Ronaldo B. et al. Goliath catfish spawning in the far western Amazon confirmed by the distribution of mature adults, drifting larvae and migrating juveniles. Scientific reports, v. 7, n. 1, p. 1-13, 2017. 13
+ARTHEM, Ronaldo . et al. Goliath catfish spawning in the far western Amazon confirmed y the distriution of mature adults, drifting larvae and migrating juveniles. Scientific reports, v. 7, n. 1, p. 1-13, 2017. 13
 
-BECKER, Fernando Gertum. Distribuição e abundância de peixes de corredeiras e suas relações com características de hábitat local, bacia de drenagem e posição espacial em riachos de Mata Atlântica (bacia do rio Maquiné, RS, Brasil. 2002.
+ECKER, Fernando Gertum. Distriuição e aundância de peixes de corredeiras e suas relações com características de háitat local, acia de drenagem e posição espacial em riachos de Mata Atlântica (acia do rio Maquiné, RS, rasil. 2002.
 
-BOWER, Luke M. et al. Effects of hydrology on fish diversity and assemblage structure in a Texan coastal plains river. Transactions of the American Fisheries Society, v. 148, n. 1, p. 207-218, 2019.
+OWER, Luke M. et al. Effects of hydrology on fish diversity and assemlage structure in a Texan coastal plains river. Transactions of the American Fisheries Society, v. 148, n. 1, p. 207-218, 2019.
 
-BRENNAN, Nathan P.; LEBER, Kenneth M.; BLACKBURN, Brett R. Use of codedwire and visible implant elastomer tags for marine stock enhancement with juvenile red snapper Lutjanus campechanus. Fisheries Research, v. 83, n. 1, p. 90-97, 2007.
+RENNAN, Nathan P.; LEER, Kenneth M.; LACKURN, rett R. Use of coded wire and visile implant elastomer tags for marine stock enhancement with juvenile red snapper Lutjanus campechanus. Fisheries Research, v. 83, n. 1, p. 90-97, 2007.
 
-BUCKUP, P. A. et al. Waterfall climging in Characidium (Crenuchidae: Characidiinae) from eastern Brazil. Ichthyological Exploration of Freshwaters, v. 11, n. 3, p. 273-278, 2000.
+UCKUP, P. A. et al. Waterfall climging in Characidium (Crenuchidae: Characidiinae) from eastern razil. Ichthyological Exploration of Freshwaters, v. 11, n. 3, p. 273-278, 2000.
 
-CAROLSFELD, Joachim et al. Migratory fishes of South America. World Fisheries Trust: Victoria, BC, Canada, 2003.
+CAROLSFELD, Joachim et al. Migratory fishes of South America. World Fisheries Trust: Victoria, C, Canada, 2003.
 
-FAUSCH, Kurt D. et al. Landscapes to riverscapes: bridging the gap between research and conservation of stream fishes: a continuous view of the river is needed to understand how processes interacting among scales set the context for stream fishes and their habitat. BioScience, v. 52, n. 6, p. 483-498, 2002.
+FAUSCH, Kurt D. et al. Landscapes to riverscapes: ridging the gap etween research and conservation of stream fishes: a continuous view of the river is needed to understand how processes interacting among scales set the context for stream fishes and their haitat. ioScience, v. 52, n. 6, p. 483-498, 2002.
 
-Gerking, S. D. (1950). Stability of a stream fish population. The Journal of Wildlife Management, 14(2), 193-202. Gerking, S. D. (1959). The restricted movement of fish populations. Biological reviews, 34(2), 221-242.
+Gerking, S. D. (1950). Staility of a stream fish population. The Journal of Wildlife Management, 14(2), 193-202. Gerking, S. D. (1959). The restricted movement of fish populations. iological reviews, 34(2), 221-242.
 
-GOWAN, Charles; FAUSCH, Kurt D. Why do foraging stream salmonids move during summer?. Environmental Biology of Fishes, v. 64, n. 1-3, p. 139-153, 2002. Gowan, C., Young, M. K., Fausch, K. D., & Riley, S. C. (1994). Restricted movement in resident stream salmonids: a paradigm lost?. Canadian Journal of Fisheries and Aquatic Sciences, 51(11), 2626-2637.
+GOWAN, Charles; FAUSCH, Kurt D. Why do foraging stream salmonids move during summer?. Environmental iology of Fishes, v. 64, n. 1-3, p. 139-153, 2002. Gowan, C., Young, M. K., Fausch, K. D., & Riley, S. C. (1994). Restricted movement in resident stream salmonids: a paradigm lost?. Canadian Journal of Fisheries and Aquatic Sciences, 51(11), 2626-2637.
 
-Henriques, R., Sousa, V., & Coelho, M. M., 2010. Migration patterns counteract seasonal isolation of Squalius torgalensis, a critically endangered freshwater fish inhabiting a typical Circum-Mediterranean small drainage. Conservation Genetics 11:1859-1870. 14
+Henriques, R., Sousa, V., & Coelho, M. M., 2010. Migration patterns counteract seasonal isolation of Squalius torgalensis, a critically endangered freshwater fish inhaiting a typical Circum-Mediterranean small drainage. Conservation Genetics 11:1859-1870. 14
 
-JONSSON, Bror; JONSSON, Nina. Partial migration: niche shift versus sexual maturation in fishes. Reviews in Fish Biology and Fisheries, v. 3, n. 4, p. 348-365, 1993.
+JONSSON, ror; JONSSON, Nina. Partial migration: niche shift versus sexual maturation in fishes. Reviews in Fish iology and Fisheries, v. 3, n. 4, p. 348-365, 1993.
 
-Krebs, Charles J. Ecological Methodology. 1999. KENNEDY, R. J. et al. Upstream migratory behaviour of wild and ranched Atlantic salmon Salmo salar at a natural obstacle in a coastal spate river. Journal of fish biology, v. 83, n. 3, p. 515-530, 2013 KNAEPKENS, G.; BAEKELANDT, K.; EENS, M. Assessment of the movement behaviour of the bullhead (Cottus gobio), an endangered European freshwater fish. Animal Biology, v. 55, n. 3, p. 219-226, 2005. Langerhans, R. B., & Reznick, D. N., 2010. Ecology and evolution of swimming performance in fishes: predicting evolution with biomechanics. Fish locomotion: an eco-ethological perspective 220:248. LARENTIS, Crislei et al. Fauna de peixes em riachos: avaliação das intervenções antrópicas sobre os atributos e estrutura funcional das assembleias. 2015. LEAL, Mateus Evangelista; BARBOSA, Amanda Saldanha; SCHULZ, Uwe Horst. Uso de Implante Visual Fluorescente de Elastômero (VIFE) na marcação de pequenos peixes de água doce tropicais. Biotemas, v. 25, n. 3, p. 311-315, 2012. LIDICKER, W. Z.; STENSETH, N. C. To disperse or not to disperse: who does it and why?. In: Animal dispersal. Springer, Dordrecht, 1992. p. 21-36. Lucas, M. C., & Baras, E. (2001). Migration of freshwater fishes.Blackwell Science. LUCENA, C. A. S. et al. O uso de óleo de cravo na eutanásia de peixes. Boletim Sociedade Brasileira de Ictiologia, v. 105, p. 20-24, 2013. Mazzoni, R., Pinto, M. P., Iglesias-Rios, R., & Costa, R., 2018. Fish movement in an Atlantic Forest stream. Neotropical Ichthyology 16. MAZZONI, R.; MENDONÇA, R. S.; CARAMASCHI, E. P. Reproductive biology of Astyanax janeiroensis (Osteichthyes, Characidae) from the Ubatiba River, Maricá, RJ, Brazil. Brazilian Journal of Biology, v. 65, n. 4, p. 643-649, 2005. McMahon, T. E., & Matter, W. J., 2006. Linking habitat selection, emigration and population dynamics of freshwater fishes: a synthesis of ideas and approaches. Ecology of Freshwater Fish 15:200-210. Radinger, J., & Wolter, C., 2014. Patterns and predictors of fish dispersal in rivers. Fish and fisheries 15:456-473. 15 Roberts, J. H., & Angermeier, P. L., 2007. Movement responses of stream fishes to introduced corridors of complex cover. Transactions of the American Fisheries Society 136:971-978. RODRÍGUEZ, Marco A. Restricted movement in stream fish: the paradigm is incomplete, not lost. Ecology, v. 83, n. 1, p. 1-13, 2002. Schlosser IJ, Angermeier PL (1995) Spatial variation in demographic processes of lotic fishes: conceptual models, empirical evidence and implications for conservation. Am Fish Symp No 17:392–401 Schulz, U. H., Nabinger, V., & Gomes, L. P. (2006). Relatório Final do Projeto Monalisa. São Leopoldo, RS. Comitê de gerenciamento da bacia do Rio dos SinosCOMITESINOS, 18p Shukla, R., & Bhat, A. (2018). Nestedness patterns and dispersal dynamics in tropical central Indian stream fish metacommunities. Freshwater Science, 37(1), 147-158. SILVA, Raquel Costa da. Movimento longitudinal de peixes: uma análise cienciométrica, manutenção de comunidades e implicação na colonização de um riacho costeiro. 2013. TERESA, Fabrício B.; CASATTI, Lilian. Influence of forest cover and mesohabitat types on functional and taxonomic diversity of fish communities in Neotropical lowland streams. Ecology of Freshwater Fish, v. 21, n. 3, p. 433-442, 2012. THIEM, Jason D. et al. Hypoxic conditions interrupt flood‐response movements of three lowland river fish species: Implications for flow restoration in modified landscapes. Ecohydrology, v. 13, n. 3, p. e2197, 2020. TERESA, Fabrício Barreto; CASATTI, Lilian; CIANCIARUSO, Marcus Vinicius. Functional differentiation between fish assemblages from forested and deforested streams. Neotropical Ichthyology, n. ahead, p. 00-00, 2015. Thompson, D. H. (1933). The migration of Illinois fishes. Biological notes; no. 001. Tilman, D., Lehman, C. L., & Kareiva, P. (1997). Population dynamics in spatial habitats. Spatial ecology: The role of space in population dynamics and interspecific interactions, 3-20. Winemiller, K. O., & Jepsen, D. B. (1998). Effects of seasonality and fish movement on tropical river food webs. Journal of fish Biology, 53, 267-296
+Kres, Charles J. Ecological Methodology. 1999. KENNEDY, R. J. et al. Upstream migratory ehaviour of wild and ranched Atlantic salmon Salmo salar at a natural ostacle in a coastal spate river. Journal of fish iology, v. 83, n. 3, p. 515-530, 2013 KNAEPKENS, G.; AEKELANDT, K.; EENS, M. Assessment of the movement ehaviour of the ullhead (Cottus goio), an endangered European freshwater fish. Animal iology, v. 55, n. 3, p. 219-226, 2005. Langerhans, R. ., & Reznick, D. N., 2010. Ecology and evolution of swimming performance in fishes: predicting evolution with iomechanics. Fish locomotion: an eco-ethological perspective 220:248. LARENTIS, Crislei et al. Fauna de peixes em riachos: avaliação das intervenções antrópicas sore os atriutos e estrutura funcional das assemleias. 2015. LEAL, Mateus Evangelista; AROSA, Amanda Saldanha; SCHULZ, Uwe Horst. Uso de Implante Visual Fluorescente de Elastômero (VIFE) na marcação de pequenos peixes de água doce tropicais. iotemas, v. 25, n. 3, p. 311-315, 2012. LIDICKER, W. Z.; STENSETH, N. C. To disperse or not to disperse: who does it and why?. In: Animal dispersal. Springer, Dordrecht, 1992. p. 21-36. Lucas, M. C., & aras, E. (2001). Migration of freshwater fishes.lackwell Science. LUCENA, C. A. S. et al. O uso de óleo de cravo na eutanásia de peixes. oletim Sociedade rasileira de Ictiologia, v. 105, p. 20-24, 2013. Mazzoni, R., Pinto, M. P., Iglesias-Rios, R., & Costa, R., 2018. Fish movement in an Atlantic Forest stream. Neotropical Ichthyology 16. MAZZONI, R.; MENDONÇA, R. S.; CARAMASCHI, E. P. Reproductive iology of Astyanax janeiroensis (Osteichthyes, Characidae) from the Uatia River, Maricá, RJ, razil. razilian Journal of iology, v. 65, n. 4, p. 643-649, 2005. McMahon, T. E., & Matter, W. J., 2006. Linking haitat selection, emigration and population dynamics of freshwater fishes: a synthesis of ideas and approaches. Ecology of Freshwater Fish 15:200-210. Radinger, J., & Wolter, C., 2014. Patterns and predictors of fish dispersal in rivers. Fish and fisheries 15:456-473. 15 Roerts, J. H., & Angermeier, P. L., 2007. Movement responses of stream fishes to introduced corridors of complex cover. Transactions of the American Fisheries Society 136:971-978. RODRÍGUEZ, Marco A. Restricted movement in stream fish: the paradigm is incomplete, not lost. Ecology, v. 83, n. 1, p. 1-13, 2002. Schlosser IJ, Angermeier PL (1995) Spatial variation in demographic processes of lotic fishes: conceptual models, empirical evidence and implications for conservation. Am Fish Symp No 17:392–401 Schulz, U. H., Nainger, V., & Gomes, L. P. (2006). Relatório Final do Projeto Monalisa. São Leopoldo, RS. Comitê de gerenciamento da acia do Rio dos Sinos
+COMITESINOS, 18p Shukla, R., & hat, A. (2018). Nestedness patterns and dispersal dynamics in tropical central Indian stream fish metacommunities. Freshwater Science, 37(1), 147-158. 
+SILVA, Raquel Costa da. Movimento longitudinal de peixes: uma análise cienciométrica, manutenção de comunidades e implicação na colonização de um riacho costeiro. 2013. TERESA, Farício .; CASATTI, Lilian. Influence of forest cover and mesohaitat types on functional and taxonomic diversity of fish communities in Neotropical lowland streams. Ecology of Freshwater Fish, v. 21, n. 3, p. 433-442, 2012. THIEM, Jason D. et al. Hypoxic conditions interrupt flood‐response movements of three lowland river fish species: Implications for flow restoration in modified landscapes. Ecohydrology, v. 13, n. 3, p. e2197, 2020. TERESA, Farício arreto; CASATTI, Lilian; CIANCIARUSO, Marcus Vinicius. Functional differentiation etween fish assemlages from forested and deforested streams. Neotropical Ichthyology, n. ahead, p. 00-00, 2015. Thompson, D. H. (1933). The migration of Illinois fishes. iological notes; no. 001. Tilman, D., Lehman, C. L., & Kareiva, P. (1997). Population dynamics in spatial haitats. Spatial ecology: The role of space in population dynamics and interspecific interactions, 3-20. Winemiller, K. O., & Jepsen, D. . (1998). Effects of seasonality and fish movement on tropical river food wes. Journal of fish iology, 53, 267-296
